--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Shantun Parmar</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="https//www.coodingdessign.com/portfolio/template2/css/style.css" type="text/css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i|Oswald:300,400,500,600,700" rel="stylesheet">
 </head>
@@ -581,6 +581,6 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-<script src="../js/main.js" type="text/javascript"></script>
+<script src="https//www.coodingdessign.com/portfolio/template2/js/main.js" type="text/javascript"></script>
 </body>
 </html>
