--- a/index.html
+++ b/index.html
@@ -581,6 +581,6 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-<script src="https//www.coodingdessign.com/portfolio/template2/js/main.js" type="text/javascript"></script>
+<script src="main.js" type="text/javascript"></script>
 </body>
 </html>
